--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
             <h5>Hello ! <br /> This is a small webapp that will list the most starred Github repos that were created in
                 the last 30 days.
                 <br>To show the list please click the button below</h5>
-            <a routerLink="/"><button class="btn btn-dark">Show</button></a>
+            <a routerLink="/trending-repos"><button class="btn btn-dark">Show</button></a>
         </div>
     </div>
 </div>
